added awesomebar autocompletion and basic history
Conflicts:

	mobile/chrome/content/browser.js

--- a/embedding/android/Makefile.in
+++ b/embedding/android/Makefile.in
@@ -55,6 +55,8 @@ JAVAFILES = \
   GeckoPhoneStateListener.java \
   AlertNotification.java \
   SurfaceLockInfo.java \
+  AwesomeBar.java \
+  DatabaseHelper.java \
   $(NULL)
 
 PROCESSEDJAVAFILES = \
@@ -126,6 +128,8 @@ RES_LAYOUT = \
   res/layout/notification_icon_text.xml \
   res/layout/launch_app_list.xml \
   res/layout/launch_app_listitem.xml \
+  res/layout/awesomebar_search.xml \
+  res/layout/awesomebar_row.xml \
   $(NULL)
 
 RES_VALUES = res/values/colors.xml res/values/themes.xml
