--- a/configure.in
+++ b/configure.in
@@ -4335,7 +4335,7 @@ LIBJPEG_TURBO_X86_ASM=
 LIBJPEG_TURBO_X64_ASM=
 MOZ_PANGO=1
 MOZ_PERMISSIONS=1
-MOZ_PLACES=1
+MOZ_PLACES=
 MOZ_PREF_EXTENSIONS=1
 MOZ_PROFILELOCKING=1
 MOZ_PSM=1
@@ -4343,7 +4343,7 @@ MOZ_RDF=1
 MOZ_REFLOW_PERF=
 MOZ_SAFE_BROWSING=
 MOZ_HELP_VIEWER=
-MOZ_SPELLCHECK=1
+MOZ_SPELLCHECK=
 MOZ_SVG_DLISTS=
 MOZ_TOOLKIT_SEARCH=1
 MOZ_UI_LOCALE=en-US
