--- a/configure.in
+++ b/configure.in
@@ -4335,7 +4335,7 @@ LIBJPEG_TURBO_X86_ASM=
 LIBJPEG_TURBO_X64_ASM=
 MOZ_PANGO=1
 MOZ_PERMISSIONS=1
-MOZ_PLACES=
+MOZ_PLACES=1
 MOZ_PREF_EXTENSIONS=1
 MOZ_PROFILELOCKING=1
 MOZ_PSM=1
